tests/snapshots/view_snapshots__message_with_tool_use.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────────────────────────┐
│   1│Let me read that file for you.                                           │
│   1│🔧  Tool: Read                                                            │
│   1│  {                                                                      │
│   1│    "file_path": "/home/user/test.rs",                                   │
│   1│    "limit": 100                                                         │
│   1│  }                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
