tests/snapshots/view_snapshots__tab_bar_multiple_tabs.snap
---
source: tests/view_snapshots.rs
assertion_line: 214
expression: output
---
┌Subagents─────────────────────────────────────────────────┐
│ agent-1 │ agent-2 │ agent-3                              │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
