tests/snapshots/view_snapshots__tab_bar_no_selection.snap
---
source: tests/view_snapshots.rs
assertion_line: 254
expression: output
---
┌Subagents───────────────────────────────────────┐
│ agent-1 │ agent-2                              │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
