tests/snapshots/view_snapshots__tab_bar_single_tab.snap
---
source: tests/view_snapshots.rs
assertion_line: 211
expression: output
---
┌Conversations─────────────────────────┐
│ Main Agent │ agent-abc123            │
│                                      │
│                                      │
└──────────────────────────────────────┘
