tests/snapshots/view_snapshots__tab_bar_with_search_matches.snap
---
source: tests/view_snapshots.rs
assertion_line: 262
expression: output
---
┌Conversations─────────────────────────────────────────────┐
│ Main Agent │ agent-1 • │ agent-2 │ agent-3 •             │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
